[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "puffergrid"
version = "0.0.2"
description = "A framework for fast grid-based environments"
authors = ["David Bloomin <daveey@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://daveey.github.io"
repository = "https://github.com/daveey/puffergrid"
keywords = ["puffergrid", "gridworld", "minigrid", "rl", "reinforcement-learning", "environment", "gym"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = "^1.21.0"
cython = "^3.0.11"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
